@@ -46,14 +46,12 @@ Archives the specified files.
 Extracts files.
 If no files are specified, all files are extracted.
 The format is not automatically detected.
-.It Ar h
-Displays the usage along with the supported versions.
 .It Ar V
 Displays the program version.
 .El
 .Pp
 The version specifies which archive format to use.
-Refer to the output of the h command for a list of supported formats.
+Running the program without a command will list the supported formats.
 The greatest version number is used by default.
 .Sh ENVIRONMENT
 .Bl -tag -width OMP_NUM_THREADS
